# Ghost

./: .gitignore  README.md  RESEARCH.md  pyproject.toml
configs/: agent_config.yaml
desktop/docs/: ARCHITECTURE.md  FEATURES.md  RESEARCH.md
ghost/: __init__.py  cli.py  config.py
ghost/agent/: apps.py  clipboard.py  file_dialog.py  filesystem.py  input_control.py  loop.py  recovery.py  safety.py  screen.py
ghost/benchmark/: runner.py  tasks_macos.py
ghost/browser/: agent.py  cdp.py  tabs.py  watcher.py
ghost/core/: ghost.py
ghost/desktop/: accessibility.py
ghost/memory/: memory.py  replay.py
ghost/ui/: app.py
ghost/vision/: grid.py  native.py  ocr.py  perceive.py  vlm.py
ghost_workspace/: MEMORY.md  SOUL.md  USER.md
ghost_workspace/memory/: 2026-03-27.md
